# mcrs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  espflash.toml
.cargo/: config.toml
.github/workflows/: build-images.yml  unit-tests.yml
firmware/: Cargo.toml  build.rs  partitions_heltec_v3.csv
firmware/src/: main.rs  memory.rs
firmware/src/app/: cli.rs  config.rs  crypto.rs  discovery.rs  identity.rs  mod.rs  neighbours.rs  ota.rs  periodic.rs  protocol_log.rs  regions.rs  remote.rs  telnet.rs
firmware/src/board/: heltec.rs  heltec_v3.rs  heltec_v4.rs  mod.rs
firmware/src/modules/: mod.rs  spi_device.rs  ssd1306.rs  sx1262.rs
firmware/src/platform/: esp.rs  mod.rs  storage.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: protocol_packet.rs  protocol_payloads.rs
protocol/: Cargo.toml
protocol/src/: ack_payload.rs  advert_app_data.rs  advert_node_type.rs  advert_payload.rs  anonymous_request_payload.rs  constants.rs  control_message.rs  control_payload.rs  crypto.rs  direct_encrypted_payload.rs  error.rs  group_encrypted_payload.rs  hash_size.rs  header.rs  lib.rs  login_constants.rs  multipart_payload.rs  packet.rs  path.rs  path_plaintext.rs  payload.rs  payload_kind.rs  repeater_login_response_plaintext.rs  repeater_response_plaintext.rs  repeater_sub_request_plaintext.rs  request_plaintext.rs  route_path.rs  route_type.rs  seen_packet_cache.rs  tests.rs  text_message_plaintext.rs  text_type.rs  trace_hash_size.rs  trace_path.rs  trace_payload.rs  transport_codes.rs  wire.rs
