[package]
name = "mcrs-firmware"
version = "0.1.0"
edition = "2024"

[features]
board-heltec-v3 = ["esp32s3"]
board-heltec-v4 = ["esp32s3"]
board-heltec-wsl3 = ["esp32s3"]
esp32 = [
    "dep:embassy-executor",
    "dep:embassy-net",
    "dep:embassy-time",
    "dep:esp-alloc",
    "dep:esp-backtrace",
    "dep:esp-bootloader-esp-idf",
    "dep:esp-hal",
    "dep:esp-rtos",
    "dep:esp-println",
    "dep:esp-rom-sys",
    "dep:esp-storage",
    "dep:esp-radio",
    "esp-backtrace/esp32",
    "esp-backtrace/custom-halt",
    "esp-bootloader-esp-idf/esp32",
    "esp-backtrace/panic-handler",
    "esp-backtrace/println",
    "esp-hal/esp32",
    "esp-hal/unstable",
    "esp-rtos/esp32",
    "esp-println/esp32",
    "esp-println/uart",
    "esp-radio/esp32",
    "esp-storage/esp32",
]
esp32s3 = [
    "dep:embassy-executor",
    "dep:embassy-net",
    "dep:embassy-time",
    "dep:esp-alloc",
    "dep:esp-backtrace",
    "dep:esp-bootloader-esp-idf",
    "dep:esp-hal",
    "dep:esp-rtos",
    "dep:esp-println",
    "dep:esp-rom-sys",
    "dep:esp-storage",
    "dep:esp-radio",
    "esp-backtrace/esp32s3",
    "esp-backtrace/custom-halt",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-backtrace/panic-handler",
    "esp-backtrace/println",
    "esp-hal/esp32s3",
    "esp-hal/unstable",
    "esp-rtos/esp32s3",
    "esp-println/esp32s3",
    "esp-println/uart",
    "esp-radio/esp32s3",
    "esp-storage/esp32s3",
]

[dependencies]
aes = { version = "0.8.4", default-features = false }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "precomputed-tables", "zeroize"] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["zeroize"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.7.0"
critical-section = "1.2.0"
embassy-executor = { version = "0.10.0", optional = true }
embassy-net = { version = "0.9.1", default-features = false, features = ["dhcpv4", "dns", "medium-ethernet", "proto-ipv4", "tcp", "udp"], optional = true }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.0", optional = true }
embedded-storage = "0.3.1"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "5e055e4977e6ed85c70a9700f6b3000d2e09a59f", optional = true }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "5e055e4977e6ed85c70a9700f6b3000d2e09a59f", optional = true }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "5e055e4977e6ed85c70a9700f6b3000d2e09a59f", default-features = false, optional = true }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "5e055e4977e6ed85c70a9700f6b3000d2e09a59f", optional = true }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", rev = "5e055e4977e6ed85c70a9700f6b3000d2e09a59f", features = ["embassy", "esp-alloc", "esp-radio"], optional = true }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "5e055e4977e6ed85c70a9700f6b3000d2e09a59f", default-features = false, optional = true }
esp-rom-sys = { git = "https://github.com/esp-rs/esp-hal.git", rev = "5e055e4977e6ed85c70a9700f6b3000d2e09a59f", optional = true }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", rev = "5e055e4977e6ed85c70a9700f6b3000d2e09a59f", default-features = false, features = ["critical-section"], optional = true }
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", rev = "5e055e4977e6ed85c70a9700f6b3000d2e09a59f", default-features = false, features = ["esp-alloc", "wifi"], optional = true }
hmac = { version = "0.12", default-features = false }
lora-phy = "3.0.1"
mcrs-protocol = { path = "../protocol" }
nb = "1.1.0"
sha2 = { version = "0.10", default-features = false }
static_cell = "2.1.1"
